[package]
name = "pqtool"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
polars = { version = "0.46", features = [
    "lazy",
    "polars-io",
    "parquet",
    "concat_str",
    "strings"
] }
polars-arrow = "0.46"
polars_excel_writer = { version = "0.12.0", features = ["zlib"] }

[dev-dependencies]
random = "0.14.0"

[features]
default = ["polars-struct", "polars-categorical", "polars-decimal"]
polars-struct = ["polars/dtype-struct"]
polars-categorical = ["polars/dtype-categorical"]
polars-decimal = ["polars/dtype-decimal"]

# [profile.release]
# lto = "fat"
